新增ID生成(基于雪花算法),数据库语句修改

--- a/EasyTcpServer.vcxproj
+++ b/EasyTcpServer.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="CELLTimestamp.hpp" />
     <ClInclude Include="ConnectionPool.h" />
     <ClInclude Include="EasyTcpServer.hpp" />
+    <ClInclude Include="IDGenerater.hpp" />
     <ClInclude Include="json\json.h" />
     <ClInclude Include="memory.h" />
     <ClInclude Include="myproto.h" />
