--- a/EasyTcpServer.vcxproj.filters
+++ b/EasyTcpServer.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="ConnectionPool.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="IDGenerater.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
